force-app/main/default/objects/Sales_Target__c/fields/Above_Rep_Productivity__c.field-meta.xml
<CustomField>
    <fullName>Above_Rep_Productivity__c</fullName>
    <formula>IF(Sales_to_Target__c &lt;= 0, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Above Rep Productivity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>