force-app/main/default/objects/Sales_Target__c/fields/Activated_Individidual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Activated_Individidual_Revenue__c</fullName>
    <label>Activated Individual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>