force-app/main/default/objects/Sales_Target__c/fields/Activation_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Activation_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Rolling average of activation percentage.  Calculated and uploaded by Deal Desk</description>
    <label>Activation Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>