force-app/main/default/objects/Sales_Target__c/fields/Actual_Credits__c.field-meta.xml
<CustomField>
    <fullName>Actual_Credits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Credits</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>