force-app/main/default/objects/Sales_Target__c/fields/Available_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Available_Bonus__c</fullName>
    <description>The total bonus amount available for the specific Sales Target owner.  Field is populated manually by Sales Ops when Sales Targets are created.</description>
    <label>Available Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>