force-app/main/default/objects/Sales_Target__c/fields/Available_Commission__c.field-meta.xml
<CustomField>
    <fullName>Available_Commission__c</fullName>
    <description>Calculated and set via Apex.  Total of commission earned in each tier of the Comp Plan</description>
    <label>Available Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>