force-app/main/default/objects/Sales_Target__c/fields/Bonus_Commission_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Commission_Multiplier__c</fullName>
    <description>Calculates the Multiplier to be used on the Bonus &amp; Commission Credit.  Currently two models, this one is for SAEs.  Due to formula compile size, the TSR model is in TSR_Bonus_Commission_Multiplier__c</description>
    <formula>IF( ISPICKVAL( Team__c , &quot;Inside Sales&quot; ) , 
IF( Revenue_of_Target__c &lt; 0.6 &amp;&amp; Target_Date__c &lt; Date(2018,01,01), 0, IF (Revenue_of_Target__c &lt; Bonus_Minimum_Attainment__c , 0 , IF( Revenue_of_Target__c &gt; 1 , (( Revenue_of_Target__c - 1 ) * 2 ) + 1 , Revenue_of_Target__c ))) , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus &amp; Commission Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>