force-app/main/default/objects/Sales_Target__c/fields/Bonus_Minimum_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Minimum_Attainment__c</fullName>
    <label>Bonus Minimum Attainment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>