force-app/main/default/objects/Sales_Target__c/fields/Commission_Paid_in_Full__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid_in_Full__c</fullName>
    <formula>Paid_Commission__c =  Earned_Commission__c</formula>
    <label>Commission Paid in Full</label>
    <type>Checkbox</type>
</CustomField>