force-app/main/default/objects/Sales_Target__c/fields/Commission_Qualified_Sales__c.field-meta.xml
<CustomField>
    <fullName>Commission_Qualified_Sales__c</fullName>
    <formula>Commission_Qualified_Sales_Credits__c  +  Commission_Qualified_Spiffs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Qualified Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>