force-app/main/default/objects/Sales_Target__c/fields/Commission_Qualified_Sales_Credits__c.field-meta.xml
<CustomField>
    <fullName>Commission_Qualified_Sales_Credits__c</fullName>
    <description>Total of qualifying Sales Credits and Spiffs. Set by DLRS.</description>
    <label>Commission Qualified Sales Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>