force-app/main/default/objects/Sales_Target__c/fields/Commission_Qualified_Spiffs__c.field-meta.xml
<CustomField>
    <fullName>Commission_Qualified_Spiffs__c</fullName>
    <label>Commission Qualified Spiffs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>