force-app/main/default/objects/Sales_Target__c/fields/Commission_Unqualified_Sales__c.field-meta.xml
<CustomField>
    <fullName>Commission_Unqualified_Sales__c</fullName>
    <label>Commission Unqualified Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>