force-app/main/default/objects/Sales_Target__c/fields/Comp_Plan__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comp Plan</label>
    <referenceTo>Comp_Plan__c</referenceTo>
    <relationshipLabel>Sales Targets</relationshipLabel>
    <relationshipName>Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>