force-app/main/default/objects/Sales_Target__c/fields/Earned_Commission__c.field-meta.xml
<CustomField>
    <fullName>Earned_Commission__c</fullName>
    <formula>IF(Activation_Percentage__c &gt;= Comp_Plan__r.Activation_Minimum_Threshold__c, IF(Activation_Percentage__c &gt;= Comp_Plan__r.Activation_100_Threshold__c,Available_Commission__c,Available_Commission__c * Activation_Percentage__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earned Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>