force-app/main/default/objects/Sales_Target__c/fields/Earned_Spiffs__c.field-meta.xml
<CustomField>
    <fullName>Earned_Spiffs__c</fullName>
    <description>Total of spiffs earned, Set by DLRS.</description>
    <label>Earned Spiffs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>