force-app/main/default/objects/Sales_Target__c/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <inlineHelpText>Additional Revenue Expected this month</inlineHelpText>
    <label>Forecast</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>