force-app/main/default/objects/Sales_Target__c/fields/Hybrid_Rep_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Rep_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this is the rep target for a Hybrid manager.</description>
    <label>Hybrid Rep/Manager</label>
    <type>Checkbox</type>
</CustomField>