force-app/main/default/objects/Sales_Target__c/fields/Manager_Credit_with_Booster__c.field-meta.xml
<CustomField>
    <fullName>Manager_Credit_with_Booster__c</fullName>
    <label>Manager Credit with Booster</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>