force-app/main/default/objects/Sales_Target__c/fields/Manager_HG_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Manager_HG_Revenue__c</fullName>
    <label>Manager HG Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>