force-app/main/default/objects/Sales_Target__c/fields/Manager_Other_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Manager_Other_Revenue__c</fullName>
    <label>Manager Other Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>