force-app/main/default/objects/Sales_Target__c/fields/Manager_Revenue_Credit__c.field-meta.xml
<CustomField>
    <fullName>Manager_Revenue_Credit__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total of Team Revenue Credit on related Sales Credits.  Updated by lookup rollup summary.</description>
    <label>Manager Revenue Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>