force-app/main/default/objects/Sales_Target__c/fields/Manager_SRC_Credit__c.field-meta.xml
<CustomField>
    <fullName>Manager_SRC_Credit__c</fullName>
    <label>Manager SRC Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>