force-app/main/default/objects/Sales_Target__c/fields/Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Multiplier__c</fullName>
    <description>Calculated in Apex from Comp Plan Rules</description>
    <label>Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>