force-app/main/default/objects/Sales_Target__c/fields/No_Sat_Upfront_Percentage__c.field-meta.xml
<CustomField>
    <fullName>No_Sat_Upfront_Percentage__c</fullName>
    <label>No Sat Upfront Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>