force-app/main/default/objects/Sales_Target__c/fields/On_leave__c.field-meta.xml
<CustomField>
    <fullName>On_leave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On leave</label>
    <type>Checkbox</type>
</CustomField>