force-app/main/default/objects/Sales_Target__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Target Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>