force-app/main/default/objects/Sales_Target__c/fields/Paid_Commission__c.field-meta.xml
<CustomField>
    <fullName>Paid_Commission__c</fullName>
    <description>Total of commission payments.  Set by DLRS.</description>
    <label>Paid Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>