force-app/main/default/objects/Sales_Target__c/fields/Paid_Spiffs__c.field-meta.xml
<CustomField>
    <fullName>Paid_Spiffs__c</fullName>
    <description>Total of spiff payments. Set by DLRS.</description>
    <label>Paid Spiffs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>