force-app/main/default/objects/Sales_Target__c/fields/Pre_November_Sales__c.field-meta.xml
<CustomField>
    <fullName>Pre_November_Sales__c</fullName>
    <label>Pre November Sales</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>