force-app/main/default/objects/Sales_Target__c/fields/Probation__c.field-meta.xml
<CustomField>
    <fullName>Probation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Probation</label>
    <type>Checkbox</type>
</CustomField>