force-app/main/default/objects/Sales_Target__c/fields/Probation_Terms__c.field-meta.xml
<CustomField>
    <fullName>Probation_Terms__c</fullName>
    <inlineHelpText>What actions have been taken and future outlook</inlineHelpText>
    <label>Probation Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>