force-app/main/default/objects/Sales_Target__c/fields/Ramped__c.field-meta.xml
<CustomField>
    <fullName>Ramped__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ramped</label>
    <type>Checkbox</type>
</CustomField>