force-app/main/default/objects/Sales_Target__c/fields/Revenue_Double_Counted__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Double_Counted__c</fullName>
    <formula>IF( OR( Manager_Revenue_Credit__c = 0 &amp;&amp; Sales_Rep_Revenue_Credit__c = 0 , 
Manager_Revenue_Credit__c = 0 &amp;&amp; VP_Revenue_Credit__c = 0 , 
Sales_Rep_Revenue_Credit__c = 0 &amp;&amp; VP_Revenue_Credit__c = 0 ) , 
FALSE , 
TRUE )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue Double Counted</label>
    <type>Checkbox</type>
</CustomField>