force-app/main/default/objects/Sales_Target__c/fields/Revenue_of_Target__c.field-meta.xml
<CustomField>
    <fullName>Revenue_of_Target__c</fullName>
    <description>% of Target Revenue achieved.  Used to calculate Bonus &amp; Commission Multiplier</description>
    <formula>ROUND( Total_Revenue_Credit__c / Revenue_Target__c , 2 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue % of Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>