force-app/main/default/objects/Sales_Target__c/fields/Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Target__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>