force-app/main/default/objects/Sales_Target__c/fields/Revenue_To_Target__c.field-meta.xml
<CustomField>
    <fullName>Revenue_To_Target__c</fullName>
    <formula>Revenue_Target__c - Total_Revenue_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue To Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>