force-app/main/default/objects/Sales_Target__c/fields/Sales_Rep_Actual_Spiff__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Actual_Spiff__c</fullName>
    <description>Sum of Actual Spiff Amount field on the Sales Credit object. Set by DLRS.</description>
    <label>Sales Rep Actual Spiff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>