force-app/main/default/objects/Sales_Target__c/fields/Sales_Rep_Paid_Spiff__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Paid_Spiff__c</fullName>
    <description>Sum of Actual Spiff Amount field on the Sales Credit object with a Spiff Paid Date. Set by DLRS.</description>
    <label>Sales Rep Paid Spiff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>