force-app/main/default/objects/Sales_Target__c/fields/Sales_Rep_Potential_Bonus_Commission__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Potential_Bonus_Commission__c</fullName>
    <description>Sum of Potential Bonus &amp; Commission Credit field on the Sales Credit object.  Set by DLRS.  Used for checking individual credits for accuracy against the total.</description>
    <label>Sales Rep Potential Bonus &amp; Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>