force-app/main/default/objects/Sales_Target__c/fields/Sales_Rep_Potential_Bonus_Commission_F__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Potential_Bonus_Commission_F__c</fullName>
    <description>Calculation of the potential Bonus &amp; Commission total. Used for checking for accuracy against the rollup total.</description>
    <formula>IF( ISPICKVAL( Team__c , &quot;Inside Sales&quot; ) , 
Available_Bonus__c * Bonus_Commission_Multiplier__c , 
Total_Revenue_Credit__c * Bonus_Commission_Multiplier__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Rep Potential Bonus &amp; Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>