force-app/main/default/objects/Sales_Target__c/fields/Sales_Rep_SR_Credit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_SR_Credit__c</fullName>
    <label>Sales Rep SR Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>