force-app/main/default/objects/Sales_Target__c/fields/Sales_Rep_SR_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_SR_Revenue__c</fullName>
    <label>Sales Rep SR Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>