force-app/main/default/objects/Sales_Target__c/fields/Sales_Rep_Tier_Qualify_Sales_Credit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Tier_Qualify_Sales_Credit__c</fullName>
    <description>Sum of Individual Credit Portion field on the Sales Credit object with an MSF &gt;= $229. Set by DLRS.  Used for calculating the Bonus and Commission Multiplier.</description>
    <label>Sales Rep Tier Qualify Sales Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>