force-app/main/default/objects/Sales_Target__c/fields/Sales_to_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_to_Target__c</fullName>
    <formula>Target__c  -   Sales_Rep_SR_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales to Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>