force-app/main/default/objects/Sales_Target__c/fields/Size_of_Team__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Team__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Total Number of Reps reporting to a manager/director/VP</description>
    <inlineHelpText>Total number of reporting reps</inlineHelpText>
    <label>Size of Team</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>