force-app/main/default/objects/Sales_Target__c/fields/Spiff_Paid_in_Full__c.field-meta.xml
<CustomField>
    <fullName>Spiff_Paid_in_Full__c</fullName>
    <formula>Earned_Spiffs__c =  Paid_Spiffs__c</formula>
    <label>Spiff Paid in Full</label>
    <type>Checkbox</type>
</CustomField>