force-app/main/default/objects/Sales_Target__c/fields/Sub_Team__c.field-meta.xml
<CustomField>
    <fullName>Sub_Team__c</fullName>
    <label>Sub-Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Territory Sales</fullName>
            </value>
            <value>
                <fullName>Outside Sales</fullName>
            </value>
            <value>
                <fullName>Major Accounts</fullName>
            </value>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>