force-app/main/default/objects/Sales_Target__c/fields/Sub_Team_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sub_Team_Start_Date__c</fullName>
    <label>Sub-Team Start Date</label>
    <type>Date</type>
</CustomField>