force-app/main/default/objects/Sales_Target__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The sales target number.</description>
    <label>Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>