force-app/main/default/objects/Sales_Target__c/fields/Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Date__c</fullName>
    <inlineHelpText>Select the first day of the target month.</inlineHelpText>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>