force-app/main/default/objects/Sales_Target__c/fields/Target_Year__c.field-meta.xml
<CustomField>
    <fullName>Target_Year__c</fullName>
    <formula>TEXT(YEAR( Target_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Year</label>
    <type>Text</type>
</CustomField>