force-app/main/default/objects/Sales_Target__c/fields/Team_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Team_Start_Date__c</fullName>
    <label>Team Start Date</label>
    <type>Date</type>
</CustomField>