force-app/main/default/objects/Sales_Target__c/fields/Total_HG_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_HG_Revenue__c</fullName>
    <formula>VP_HG_Revenue__c + Manager_HG_Revenue__c + Sales_Rep_HG_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total HG Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>