force-app/main/default/objects/Sales_Target__c/fields/Total_HG_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_HG_Sales__c</fullName>
    <formula>VP_HG_Credit__c + Manager_HG_Credit__c + Sales_Rep_HG_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total HG Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>