force-app/main/default/objects/Sales_Target__c/fields/Total_LL_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_LL_Sales__c</fullName>
    <formula>VP_LL_Credit__c + Manager_LL_Credit__c + Sales_Rep_LL_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total LL Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>