force-app/main/default/objects/Sales_Target__c/fields/Total_Other_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Sales__c</fullName>
    <formula>VP_Other_Credit__c + Manager_Other_Credit__c + Sales_Rep_Other_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>