force-app/main/default/objects/Sales_Target__c/fields/Total_Revenue_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Revenue_Credit__c</fullName>
    <formula>Sales_Rep_Revenue_Credit__c + Manager_Revenue_Credit__c + VP_Revenue_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Revenue Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>