force-app/main/default/objects/Sales_Target__c/fields/Total_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales__c</fullName>
    <formula>if(  Target_Date__c &gt; Date(2014,10,31),
 Actual_Credits__c ,
 Pre_November_Sales__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>