force-app/main/default/objects/Sales_Target__c/fields/Total_SR_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_SR_Revenue__c</fullName>
    <formula>VP_SR_Revenue__c + Manager_SR_Revenue__c + Sales_Rep_SR_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SR Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>