force-app/main/default/objects/Sales_Target__c/fields/Total_SR_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_SR_Sales__c</fullName>
    <formula>VP_SR_Credit__c + Manager_SR_Credit__c + Sales_Rep_SR_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SR Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>