force-app/main/default/objects/Sales_Target__c/fields/Total_SRC_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_SRC_Sales__c</fullName>
    <formula>VP_SRC_Credit__c + Manager_SRC_Credit__c + Sales_Rep_SRC_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SRC Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>