force-app/main/default/objects/Sales_Target__c/fields/Total_SRSR_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_SRSR_Revenue__c</fullName>
    <formula>VP_SRSR_Revenue__c + Manager_SRSR_Revenue__c + Sales_Rep_SRSR_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SRSR Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>