force-app/main/default/objects/Sales_Target__c/fields/Total_SRSR_Sales__c.field-meta.xml
<CustomField>
    <fullName>Total_SRSR_Sales__c</fullName>
    <formula>VP_SRSR_Credit__c + Manager_SRSR_Credit__c + Sales_Rep_SRSR_Credit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total SRSR Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>